# restful_emb

q1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
q1/src/: webcam.cpp
q2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  index.php
q2/src/: face.cpp
q3/httpClientSync/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
q3/httpClientSync/src/: httpClient.cpp
q3/httpServerFast/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
q3/httpServerFast/src/: fields_alloc.hpp  httpServer.cpp
q4/: q1.service  q2.service  q3.service
