cmake_minimum_required(VERSION 2.8)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin") 
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
SET(OpenCV_DIR ~/opencv/installation/OpenCV-master/lib/cmake/opencv4)
project( webcam )
find_package(Threads REQUIRED)	
find_package(PahoMqttCpp REQUIRED)
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( webcam src/webcam.cpp )
target_link_libraries( webcam ${OpenCV_LIBS}  PahoMqttCpp::paho-mqttpp3-static )
